# Biometric_zerotrust_FHE_db

./: .gitignore  README.md
client/: main.py
fhe_store/: Cargo.toml
fhe_store/src/: main.rs
